{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 92,
  "lineage": "a9fc7405-4829-1192-0009-5c30c25a7af6",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet_shared_ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet_webin_ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "name": "zgebs-wb-dev-snet-webin-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "workbench-dev-neu-vnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet_webout_ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.5.0/24",
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "name": "zgebs-wb-dev-snet-webout-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "virtual_network_name": "workbench-dev-neu-vnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "e3151155-34df-451d-8197-4f399802836c",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "subnets": [
              "zgebs-wb-dev-snet-shared-ne99",
              "zgebs-wb-dev-snet-webin-ne01",
              "zgebs-wb-dey-snet-apim-ne01",
              "zgebs-wb-dev-snet-webout-ne01"
            ]
          }
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet_webin_ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "name": "zgebs-wb-dev-snet-webin-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "workbench-dev-neu-vnet"
          }
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet_webout_ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.5.0/24",
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "name": "zgebs-wb-dev-snet-webout-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "virtual_network_name": "workbench-dev-neu-vnet"
          }
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "e3151155-34df-451d-8197-4f399802836c",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "subnets": [
              "zgebs-wb-dev-snet-shared-ne99",
              "zgebs-wb-dev-snet-webin-ne01",
              "zgebs-wb-dey-snet-apim-ne01",
              "zgebs-wb-dev-snet-webout-ne01"
            ]
          }
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-application-rg/providers/Microsoft.Network/networkInterfaces/zegebs-wb-dev-apiwapp-nic-ne-01",
            "internal_domain_name_suffix": "kuirly45gqoulamxj22zqaudne.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
              }
            ],
            "location": "northeurope",
            "name": "zegebs-wb-dev-apiwapp-nic-ne-01",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "zgebs-workbench-dev-application-rg"
          },
          "dependencies": [
            "module.app-service.azurerm_resource_group.app",
            "module.app-service.data.azurerm_subnet.snet_webin_ds",
            "module.app-service.data.azurerm_virtual_network.vnetds",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_subnet_network_security_group_association.snsg",
            "module.network.azurerm_subnet_network_security_group_association.snsg_apim",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webin",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webout",
            "module.network.azurerm_subnet_route_table_association.srt",
            "module.network.azurerm_subnet_route_table_association.srt_apim",
            "module.network.azurerm_subnet_route_table_association.srt_webin",
            "module.network.azurerm_subnet_route_table_association.srt_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_dgv",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-application-rg/providers/Microsoft.Network/networkInterfaces/zegebs-wb-dev-dgowapp-nic-ne-01",
            "internal_domain_name_suffix": "kuirly45gqoulamxj22zqaudne.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
              }
            ],
            "location": "northeurope",
            "name": "zegebs-wb-dev-dgowapp-nic-ne-01",
            "private_ip_address": "10.0.4.10",
            "private_ip_addresses": [
              "10.0.4.10"
            ],
            "resource_group_name": "zgebs-workbench-dev-application-rg"
          },
          "dependencies": [
            "module.app-service.azurerm_resource_group.app",
            "module.app-service.data.azurerm_subnet.snet_webin_ds",
            "module.app-service.data.azurerm_virtual_network.vnetds",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_subnet_network_security_group_association.snsg",
            "module.network.azurerm_subnet_network_security_group_association.snsg_apim",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webin",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webout",
            "module.network.azurerm_subnet_route_table_association.srt",
            "module.network.azurerm_subnet_route_table_association.srt_apim",
            "module.network.azurerm_subnet_route_table_association.srt_webin",
            "module.network.azurerm_subnet_route_table_association.srt_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_fcsd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-application-rg/providers/Microsoft.Network/networkInterfaces/zegebs-wb-dev-fcsdwapp-nic-ne-01",
            "internal_domain_name_suffix": "kuirly45gqoulamxj22zqaudne.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
              }
            ],
            "location": "northeurope",
            "name": "zegebs-wb-dev-fcsdwapp-nic-ne-01",
            "private_ip_address": "10.0.4.8",
            "private_ip_addresses": [
              "10.0.4.8"
            ],
            "resource_group_name": "zgebs-workbench-dev-application-rg"
          },
          "dependencies": [
            "module.app-service.azurerm_resource_group.app",
            "module.app-service.data.azurerm_subnet.snet_webin_ds",
            "module.app-service.data.azurerm_virtual_network.vnetds",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_subnet_network_security_group_association.snsg",
            "module.network.azurerm_subnet_network_security_group_association.snsg_apim",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webin",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webout",
            "module.network.azurerm_subnet_route_table_association.srt",
            "module.network.azurerm_subnet_route_table_association.srt_apim",
            "module.network.azurerm_subnet_route_table_association.srt_webin",
            "module.network.azurerm_subnet_route_table_association.srt_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_lpa",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-application-rg/providers/Microsoft.Network/networkInterfaces/zegebs-wb-dev-lpawapp-nic-ne-01",
            "internal_domain_name_suffix": "kuirly45gqoulamxj22zqaudne.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
              }
            ],
            "location": "northeurope",
            "name": "zegebs-wb-dev-lpawapp-nic-ne-01",
            "private_ip_address": "10.0.4.7",
            "private_ip_addresses": [
              "10.0.4.7"
            ],
            "resource_group_name": "zgebs-workbench-dev-application-rg"
          },
          "dependencies": [
            "module.app-service.azurerm_resource_group.app",
            "module.app-service.data.azurerm_subnet.snet_webin_ds",
            "module.app-service.data.azurerm_virtual_network.vnetds",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_subnet_network_security_group_association.snsg",
            "module.network.azurerm_subnet_network_security_group_association.snsg_apim",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webin",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webout",
            "module.network.azurerm_subnet_route_table_association.srt",
            "module.network.azurerm_subnet_route_table_association.srt_apim",
            "module.network.azurerm_subnet_route_table_association.srt_webin",
            "module.network.azurerm_subnet_route_table_association.srt_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_mzsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-application-rg/providers/Microsoft.Network/networkInterfaces/zegebs-wb-dev-mzsawapp-nic-ne-01",
            "internal_domain_name_suffix": "kuirly45gqoulamxj22zqaudne.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
              }
            ],
            "location": "northeurope",
            "name": "zegebs-wb-dev-mzsawapp-nic-ne-01",
            "private_ip_address": "10.0.4.6",
            "private_ip_addresses": [
              "10.0.4.6"
            ],
            "resource_group_name": "zgebs-workbench-dev-application-rg"
          },
          "dependencies": [
            "module.app-service.azurerm_resource_group.app",
            "module.app-service.data.azurerm_subnet.snet_webin_ds",
            "module.app-service.data.azurerm_virtual_network.vnetds",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_subnet_network_security_group_association.snsg",
            "module.network.azurerm_subnet_network_security_group_association.snsg_apim",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webin",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webout",
            "module.network.azurerm_subnet_route_table_association.srt",
            "module.network.azurerm_subnet_route_table_association.srt_apim",
            "module.network.azurerm_subnet_route_table_association.srt_webin",
            "module.network.azurerm_subnet_route_table_association.srt_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_nwp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-application-rg/providers/Microsoft.Network/networkInterfaces/zegebs-wb-dev-nwpwapp-nic-ne-01",
            "internal_domain_name_suffix": "kuirly45gqoulamxj22zqaudne.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
              }
            ],
            "location": "northeurope",
            "name": "zegebs-wb-dev-nwpwapp-nic-ne-01",
            "private_ip_address": "10.0.4.5",
            "private_ip_addresses": [
              "10.0.4.5"
            ],
            "resource_group_name": "zgebs-workbench-dev-application-rg"
          },
          "dependencies": [
            "module.app-service.azurerm_resource_group.app",
            "module.app-service.data.azurerm_subnet.snet_webin_ds",
            "module.app-service.data.azurerm_virtual_network.vnetds",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_subnet_network_security_group_association.snsg",
            "module.network.azurerm_subnet_network_security_group_association.snsg_apim",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webin",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webout",
            "module.network.azurerm_subnet_route_table_association.srt",
            "module.network.azurerm_subnet_route_table_association.srt_apim",
            "module.network.azurerm_subnet_route_table_association.srt_webin",
            "module.network.azurerm_subnet_route_table_association.srt_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app-service",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_zhrz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-application-rg/providers/Microsoft.Network/networkInterfaces/zegebs-wb-dev-zhrzwapp-nic-ne-01",
            "internal_domain_name_suffix": "kuirly45gqoulamxj22zqaudne.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
              }
            ],
            "location": "northeurope",
            "name": "zegebs-wb-dev-zhrzwapp-nic-ne-01",
            "private_ip_address": "10.0.4.9",
            "private_ip_addresses": [
              "10.0.4.9"
            ],
            "resource_group_name": "zgebs-workbench-dev-application-rg"
          },
          "dependencies": [
            "module.app-service.azurerm_resource_group.app",
            "module.app-service.data.azurerm_subnet.snet_webin_ds",
            "module.app-service.data.azurerm_virtual_network.vnetds",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_subnet_network_security_group_association.snsg",
            "module.network.azurerm_subnet_network_security_group_association.snsg_apim",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webin",
            "module.network.azurerm_subnet_network_security_group_association.snsg_webout",
            "module.network.azurerm_subnet_route_table_association.srt",
            "module.network.azurerm_subnet_route_table_association.srt_apim",
            "module.network.azurerm_subnet_route_table_association.srt_webin",
            "module.network.azurerm_subnet_route_table_association.srt_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.keyvault",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet_shared_ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.keyvault",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "e3151155-34df-451d-8197-4f399802836c",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "subnets": [
              "zgebs-wb-dev-snet-shared-ne99",
              "zgebs-wb-dev-snet-webin-ne01",
              "zgebs-wb-dey-snet-apim-ne01",
              "zgebs-wb-dev-snet-webout-ne01"
            ]
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-nsg1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet-rt1",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "route": [
              {
                "address_prefix": "10.100.0.0/14",
                "name": "example",
                "next_hop_in_ip_address": "10.10.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "name": "zgebs-wb-dey-snet-apim-ne01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne99",
            "name": "zgebs-wb-dev-snet-shared-ne99",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_webin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "name": "zgebs-wb-dev-snet-webin-ne01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "timeouts": {
            },
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_webout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "name": "zgebs-wb-dev-snet-webout-ne01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "workbench-dev-neu-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne99",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne99"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg_webin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsg_webout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "network_security_group_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/workbench-dev-neu-vnet-nsg1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne99",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne99"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_shared",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_apim",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt_webin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_webin",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "srt_webout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
            "route_table_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/routeTables/workbench-dev-neu-vnet-rt1",
            "subnet_id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_route_table.rt",
            "module.network.azurerm_subnet.snet_webout",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e3151155-34df-451d-8197-4f399802836c",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dey-snet-apim-ne01",
                "name": "zgebs-wb-dey-snet-apim-ne01"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-shared-ne99",
                "name": "zgebs-wb-dev-snet-shared-ne99"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webin-ne01",
                "name": "zgebs-wb-dev-snet-webin-ne01"
              },
              {
                "address_prefix": "10.0.5.0/24",
                "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet/subnets/zgebs-wb-dev-snet-webout-ne01",
                "name": "zgebs-wb-dev-snet-webout-ne01"
              }
            ],
            "timeouts": {
            }
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet_shared_ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.storage",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnetds",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "e3151155-34df-451d-8197-4f399802836c",
            "id": "/subscriptions/fec1a8c7-3053-43ab-b51d-9fcc38bd9399/resourceGroups/zgebs-workbench-dev-neu-vnet-rg/providers/Microsoft.Network/virtualNetworks/workbench-dev-neu-vnet",
            "location": "northeurope",
            "name": "workbench-dev-neu-vnet",
            "resource_group_name": "zgebs-workbench-dev-neu-vnet-rg",
            "subnets": [
              "zgebs-wb-dev-snet-shared-ne99",
              "zgebs-wb-dev-snet-webin-ne01",
              "zgebs-wb-dey-snet-apim-ne01",
              "zgebs-wb-dev-snet-webout-ne01"
            ]
          }
        }
      ]
    }
  ]
}